[package]
name = "nbtsearch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
log = "0.4"
hematite-nbt = "0.5"
regex = "1.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
simplelog = "0.11"
structopt = "0.3"